<resources>
    <string name="app_name">AniViewer-kun</string>
    <string name="airing">Now Airing</string>
    <string name="menu">Menu</string>
    <string name="filterSort">Sort by:</string>
    <string name="top100">Top 100</string>
    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="introduction">Introduction:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="also_known_as">Also known as:</string>
    <string name="country_of_origin">Country of Origin:</string>
    <string name="media_format">Media Format:</string>
    <string name="genres">Genres:</string>
    <string name="login">LOGIN</string>
    <string name="username">Username:</string>
    <string name="user_id">User ID:</string>
    <string name="app_theme">App Theme:</string>
</resources>