<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_airing"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/airing" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top100"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/top100" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/search" />
    </group>
</menu>