<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_airing">

    <fragment
        android:id="@+id/nav_airing"
        android:name="com.android.aniviewer_kun.ui.AiringFragment"
        android:label="@string/airing"
        tools:layout="@layout/fragment_rv_sort" />
    <fragment
        android:id="@+id/nav_top100"
        android:name="com.android.aniviewer_kun.ui.Top100Fragment"
        android:label="@string/top100"
        tools:layout="@layout/fragment_rv" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.android.aniviewer_kun.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_rv_search" />

</navigation>